--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "dev": "hexo server",
-    "commit" : "git add . && git commit -m 'update'"
+    "commit" : "git add . && git commit -m \"chore: update\""
   },
   "hexo": {
     "version": "6.3.0"
